[metadata]
name = mlmc
version = 0.0.0
description = Playing with Jraph Jax Graphs
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludwig Schneider
url = https://github.com/InnocentBug/MLMC
license = MIT
license_files = LICENSE
platforms = any

[options]
python_requires = >=3.10
include_package_data = True
install_requires =
		 flax
		 optax
		 pydot

[options.packages.find]
where = src/mlmc